--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="favorite_description">Favorite</string>
     <string name="menu">Menu</string>
     <string name="compose">Compose</string>
+    <string name="search">Search</string>
 </resources>
